@@ -1,37 +1,19 @@
-## Welcome to GitHub Pages
+# JVM
 
-You can use the [editor on GitHub](https://github.com/chovy-3012/chovy-blog.github.io/edit/gh-pages/index.md) to maintain and preview the content for your website in Markdown files.
+## 常用参数
 
-Whenever you commit to this repository, GitHub Pages will run [Jekyll](https://jekyllrb.com/) to rebuild the pages in your site, from the content in your Markdown files.
-
-### Markdown
-
-Markdown is a lightweight and easy-to-use syntax for styling your writing. It includes conventions for
-
-```markdown
-Syntax highlighted code block
-
-# Header 1
-## Header 2
-### Header 3
-
-- Bulleted
-- List
-
-1. Numbered
-2. List
-
-**Bold** and _Italic_ and `Code` text
-
-[Link](url) and ![Image](src)
+```shell
+## 设置内存大小
+-Xms16g -Xmx32g -server 
+## 使用G1垃圾回收期
+-XX:+UseG1GC -XX:MaxGCPauseMillis=50  
+## 打印GC日志
+-verbose:gc -XX:+PrintGCDetails -XX:+PrintGCDateStamps -Xloggc:$KYLIN_HOME/logs/kylin.gc.log-`date +'%Y%m%d%H%M'` -XX:+UseGCLogFileRotation -XX:NumberOfGCLogFiles=12 -XX:GCLogFileSize=128M 
+## 开启JMX端口
+-Dcom.sun.management.jmxremote.ssl=false -Dcom.sun.management.jmxremote.authenticate=false -Dcom.sun.management.jmxremote.port=7778
+## 开启远程调试
+-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=11000
+## full gc前打印堆文件
+-XX:+HeapDumpBeforeFullGC -XX:HeapDumpPath=/var/log/hbase/dump.hprof
 ```
 
-For more details see [Basic writing and formatting syntax](https://docs.github.com/en/github/writing-on-github/getting-started-with-writing-and-formatting-on-github/basic-writing-and-formatting-syntax).
-
-### Jekyll Themes
-
-Your Pages site will use the layout and styles from the Jekyll theme you have selected in your [repository settings](https://github.com/chovy-3012/chovy-blog.github.io/settings/pages). The name of this theme is saved in the Jekyll `_config.yml` configuration file.
-
-### Support or Contact
-
-Having trouble with Pages? Check out our [documentation](https://docs.github.com/categories/github-pages-basics/) or [contact support](https://support.github.com/contact) and we’ll help you sort it out.
